--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
     <div class="container">
 
         <div class="vk">
-            <h2>TO-Do-list <img src ="images/icon.png"></h2>
+            <h2>TO-Do-list <img src ="icon.png"></h2>
             <div class="row">
                 <input type="text" id="input-box" placeholder="Add your text">
                 
